<resources>
    <string name="app_name">Online Shop</string>
    <string name="sing_in">Sing in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="google">Google</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="apple">Apple</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_avatar">User avatar</string>
    <string name="change_photo">Change photo</string>
    <string name="satria_adhi_pradana">Satria Adhi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="go_to_trade_store">Go to Trade Store</string>
    <string name="payment_method">Payment method</string>
    <string name="go_to_payment_method">Go to payment method</string>
    <string name="balance">Balance</string>
    <string name="_1593">$ 1593</string>
    <string name="trade_history">Trade history</string>
    <string name="go_to_trade_history">Go to trade history</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="go_to_restore_purchase">Go to restore purchase</string>
    <string name="log_out">Log out</string>
    <string name="help">Help</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="phones">Phones</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="samsung_s10">Samsung S10</string>
    <string name="_180_000">$ 180,000</string>
    <string name="plus">plus</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="kids">Kids</string>
    <string name="new_balance">New balance \n sneakers</string>
    <string name="_33_00">$ 33,00</string>
    <string name="_30_off">30% off</string>
    <string name="brands">Brands</string>
    <string name="back">back</string>
    <string name="dash">Dash</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="_22_50">$ 22,50</string>
    <string name="star">Star</string>
    <string name="color">Color:</string>
    <string name="trade_by_bata">Trade by <font color = "#254FE6"><b>bata</b></font></string>
    <string name="location">Location</string>
    <string name="arrow_bottom">Arrow bottom</string>
    <string name="main">Main</string>
    <string name="favorites">Favorites</string>
    <string name="basket">Basket</string>
    <string name="messages">Messages</string>
</resources>