<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/itPage1"
        android:icon="@drawable/ic_home_17dp"
        android:title="@string/main"
        />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_like_17dp"
        android:title="@string/favorites"
        />

    <item
        android:id="@+id/basketFragment"
        android:icon="@drawable/ic_basket_17dp"
        android:title="@string/basket"
        />

    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/ic_message_17dp"
        android:title="@string/messages"
        />

    <item
        android:id="@+id/itProfile"
        android:icon="@drawable/ic_profile_17dp"
        android:title="Profile"
        />
</menu>