<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="290dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sing_in"
        android:textSize="26sp"
        android:fontFamily="@font/montserrat_600"
        android:textColor="@color/title"
        android:textAlignment="center"
        android:layout_marginBottom="70dp"
        />

    <EditText
        android:id="@+id/edt_first_name"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:hint="@string/first_name"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_500"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:background="@drawable/shape_text_input"
        android:inputType="text"
        android:layout_marginBottom="35dp"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/edt_last_name"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:hint="@string/last_name"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_500"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:background="@drawable/shape_text_input"
        android:inputType="text"
        android:layout_marginBottom="35dp"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:hint="@string/email"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_500"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:background="@drawable/shape_text_input"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="35dp"
        android:autofillHints="emailAddress"
        />

    <Button
        android:id="@+id/btn_sign_in"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_blue_button"
        android:textColor="@color/btn_text"
        android:text="@string/sign_in"
        android:fontFamily="@font/montserrat_700"
        android:textSize="14sp"
        android:layout_marginBottom="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:fontFamily="@font/montserrat_500"
            android:textColor="@color/text_info"
            android:textSize="12sp"
            android:layout_marginEnd="6dp"
            />

        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:fontFamily="@font/montserrat_500"
            android:textColor="@color/link"
            android:textSize="12sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google_24dp"
            android:contentDescription="@string/google"
            android:layout_marginEnd="12dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_google"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_500"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_apple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_apple_24dp"
            android:contentDescription="@string/apple"
            android:layout_marginEnd="12dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_apple"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_500"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>