<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="290dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    >

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape_avatar"
        android:scaleType="centerCrop"
        app:civ_border_color="#ffffff"
        app:civ_border_width="3dp"
        android:contentDescription="@string/user_avatar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_photo"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/montserrat_500"
        android:textSize="10sp"
        android:textColor="@color/text_info"
        android:layout_marginTop="6dp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/satria_adhi_pradana"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/montserrat_700"
        android:layout_marginTop="17dp"
        android:textColor="@color/user_name"/>

    <Button
        android:id="@+id/btn_login"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_blue_button"
        android:textColor="@color/btn_text"
        android:text="@string/upload_item"
        android:fontFamily="@font/montserrat_700"
        android:textSize="14sp"
        app:icon="@drawable/ic_upload_15dp"
        android:paddingHorizontal="50dp"
        app:iconPadding="0dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="14dp"
        />
    
    <LinearLayout
        android:id="@+id/trade_store_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp"
        >
        
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_avatar"
            android:src="@drawable/ic_credit_card_24dp"
            android:scaleType="center"
            android:contentDescription="@string/trade_store"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trade_store"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat_500"
            android:layout_marginHorizontal="6dp"
            android:textColor="@color/text_color"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next_14dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/go_to_trade_store" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/payment_method_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_avatar"
            android:src="@drawable/ic_credit_card_24dp"
            android:scaleType="center"
            android:contentDescription="@string/trade_store"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat_500"
            android:layout_marginHorizontal="6dp"
            android:textColor="@color/text_color"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next_14dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/go_to_payment_method" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/balance_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_avatar"
            android:src="@drawable/ic_credit_card_24dp"
            android:scaleType="center"
            android:contentDescription="@string/trade_store"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat_500"
            android:layout_marginHorizontal="6dp"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/_1593"
            android:fontFamily="@font/montserrat_500"
            android:textColor="@color/text_color"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/trade_history_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_avatar"
            android:src="@drawable/ic_credit_card_24dp"
            android:scaleType="center"
            android:contentDescription="@string/trade_store"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trade_history"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat_500"
            android:layout_marginHorizontal="6dp"
            android:textColor="@color/text_color"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next_14dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/go_to_trade_history" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/restore_purchase_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_avatar"
            android:src="@drawable/ic_return_24dp"
            android:scaleType="center"
            android:contentDescription="@string/trade_store"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/restore_purchase"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat_500"
            android:layout_marginHorizontal="6dp"
            android:textColor="@color/text_color"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next_14dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/go_to_restore_purchase" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/help_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_avatar"
            android:src="@drawable/ic_help_24dp"
            android:scaleType="center"
            android:contentDescription="@string/trade_store"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat_500"
            android:layout_marginHorizontal="6dp"
            android:textColor="@color/text_color"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/log_in_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="25dp"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_avatar"
            android:src="@drawable/ic_log_in_24dp"
            android:scaleType="center"
            android:contentDescription="@string/trade_store"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/montserrat_500"
            android:layout_marginHorizontal="6dp"
            android:textColor="@color/text_color"/>

    </LinearLayout>

</LinearLayout>