<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="114dp"
    android:layout_height="149dp"
    app:cardElevation="0dp"
    android:layout_marginStart="12dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:paddingStart="7dp"
        android:paddingEnd="5dp"
        android:paddingBottom="7dp"
        android:background="@drawable/shape_latest_card"
        >
        
        <TextView
            android:layout_width="35dp"
            android:layout_height="12dp"
            android:background="@drawable/shape_category_banner_r5"
            android:text="@string/phones"
            android:textSize="6sp"
            android:textAlignment="center"
            android:paddingTop="1dp"
            android:fontFamily="@font/poppins_600"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/samsung_s10"
            android:fontFamily="@font/poppins_600"
            android:textSize="9sp"
            android:textColor="@color/white"
            android:layout_marginTop="3dp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3dp"
            >

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/_180_000"
                android:fontFamily="@font/poppins_600"
                android:textSize="7sp"
                android:textColor="@color/white"
                tools:ignore="SmallSp"
                />

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/shape_avatar"
                android:src="@drawable/ic_plus_12dp"
                android:contentDescription="@string/plus" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>