<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="174dp"
    android:layout_height="221dp"
    app:cardElevation="0dp"
    android:layout_marginStart="12dp"
    >

    <ImageView
        android:id="@+id/iv_flash_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="7dp"
        android:paddingStart="7dp"
        android:paddingEnd="5dp"
        android:paddingBottom="7dp"
        android:background="@drawable/shape_latest_card"
        >
        
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            >
            
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/shape_avatar"
                android:contentDescription="@string/user_avatar" />

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="NestedWeights" />
            
            <TextView
                android:id="@+id/tv_discount"
                android:layout_width="49dp"
                android:layout_height="18dp"
                android:text="@string/_30_off"
                android:background="@drawable/shape_sale_off_banner"
                android:fontFamily="@font/poppins_600"
                android:textColor="@color/white"
                android:paddingTop="1dp"
                android:textSize="10sp"
                android:textAlignment="center"
                tools:ignore="SmallSp" />
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="50dp"
                android:layout_height="17dp"
                android:background="@drawable/shape_category_banner_r8"
                android:text="@string/kids"
                android:textSize="9sp"
                android:textAlignment="center"
                android:paddingTop="2dp"
                android:fontFamily="@font/poppins_600"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_balance"
                android:fontFamily="@font/poppins_600"
                android:textSize="9sp"
                android:textColor="@color/white"
                android:layout_marginTop="6dp"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="3dp"
                >

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/_33_00"
                    android:fontFamily="@font/poppins_600"
                    android:textSize="10sp"
                    android:textColor="@color/white"
                    tools:ignore="SmallSp"
                    />

                <ImageButton
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="@drawable/shape_avatar"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="5dp"
                    android:src="@drawable/ic_like_12dp"
                    android:contentDescription="@string/plus" />

                <ImageButton
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/shape_avatar"
                    android:src="@drawable/ic_plus_20dp"
                    android:contentDescription="@string/plus" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    

</androidx.cardview.widget.CardView>