<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingBottom="9dp"
        android:paddingTop="21dp"
        android:paddingHorizontal="16dp"
        >

        <ImageButton
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:paddingStart="-16dp"
            android:src="@drawable/ic_burger_22dp"
            android:background="#00000000"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trade_by_bata"
            android:fontFamily="@font/montserrat_700"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_avatar"
                android:scaleType="centerCrop"
                android:contentDescription="@string/user_avatar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="7dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:fontFamily="@font/poppins_400"
                    android:textSize="10sp"
                    android:textColor="@color/hint_search"
                    android:layout_marginEnd="2dp"
                    tools:ignore="SmallSp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_bottom_5dp"
                    android:contentDescription="@string/arrow_bottom" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/flFragment"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:layout_height="63dp"
        app:menu="@menu/bottom_menu"
        app:elevation="0dp"
        app:itemIconTint="@drawable/bottom_nav_selector"
        app:labelVisibilityMode="unlabeled"
        android:background="@drawable/shape_bottom_menu"
        />
  </LinearLayout>